--- a/levantsites_climate_envelope.ipynb
+++ b/levantsites_climate_envelope.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Climate Envelope of Ancient Sites in the Levant — v2 (Wider AOI + Terrain/Distance)\n",
+    "# Climate Envelope of Ancient Sites in the Levant\n",
     "\n",
-    "**What’s new in v2**  \n",
-    "- **Wider AOI**: whole South Levant (~29–34.8°N, 34–37.6°E)  \n",
-    "- **New predictors**: elevation, **slope**, **distance to coast**, **distance to major rivers**  \n",
-    "- **Balanced backgrounds**: ~10× backgrounds per presence (cap 20k), filtered to land/nodata-free  \n",
-    "- **Same spatially-blocked CV** + robust imputation  \n"
+    "- A transparent, reproducible presence–background model to predict where ancient sites are most likely in the South Levant, using modern climate, terrain, and distance to water.\n",
+    "- Out-of-fold performance is strong: AUC 0.953, AP 0.593, Brier 0.0567 (dataset prevalence ≈ 0.091).\n",
+    "- The model says seasonality dominates (temperature & precipitation seasonality), with proximity to rivers and terrain refining suitability.\n",
+    "- The Folium map highlights river corridors and Mediterranean belts as high-suitability zones.\n",
+    "- This is a quick, fun proof-of-concept, not a full research project.\n"
    ]
   },
   {
